final update icacsis

--- a/doc/icacsis/bare_conf.tex
+++ b/doc/icacsis/bare_conf.tex
@@ -64,7 +64,7 @@
 \begin{document}
 
 % paper title
-\title{Feature selection methods for machine learning-based docking prediction of Indonesian medicinal plant compounds and HIV-1 protease}
+\title{The impact of feature selection methods on machine learning-based docking prediction of Indonesian medicinal plant compounds and HIV-1 protease}
 
 
 % author names and affiliations
@@ -94,7 +94,7 @@
 	
 	\IEEEauthorblockA{
 		\IEEEauthorrefmark{1}Faculty of Computer Science, Universitas Indonesia\\
-		rahman.pujianto@ui.ac.id, yohanes.gultom@ui.ac.id, ari.w@cs.ui.ac.id, heru@cs.ui.ac.id
+		rahmanpujianto@gmail.com, yohanes.gultom@gmail.com, ari.w@cs.ui.ac.id, heru@cs.ui.ac.id
 	}\\
 	
 	\IEEEauthorblockA{
